# cnn_framework

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
scripts/dummy_cnn/: test.py  train.py
scripts/dummy_regression_cnn/: test.py  train.py
scripts/dummy_segmentation/: test.py  train.py
scripts/dummy_sim_clr/: test.py  train.py
scripts/dummy_vae_model/: train.py
src/cnn_framework/_tests/: test_classification.py  test_regression.py
src/cnn_framework/data/: tools.py
src/cnn_framework/dummy_cnn/: data_set.py  model.py  model_params.py  test.py  train.py
src/cnn_framework/dummy_regression_cnn/: data_set.py  model.py  model_params.py  test.py  train.py
src/cnn_framework/dummy_segmentation/: data_set.py  model.py  model_params.py  test.py  train.py
src/cnn_framework/dummy_sim_clr/: data_set.py  model.py  model_params.py
src/cnn_framework/dummy_vae_model/: data_set.py  decoder.py  encoder.py  model_params.py  test.py  train.py
src/cnn_framework/utils/: DataManagers.py  ModelParams.py  VAEModelParams.py  create_dummy_data_set.py  dimensions.py  display_tools.py  enum.py  file_name_encoder.py  metrics.py  preprocessing.py  tools.py  vae_model_params.py
src/cnn_framework/utils/augmentations/: clip.py  unnormalize.py
src/cnn_framework/utils/data_loader_generators/: ClassifierDataLoaderGenerator.py  DataLoaderGenerator.py  (+2 more)
tutorials/: classification.ipynb  contrastive_learning.ipynb  create_dummy_data_set.py  regression.ipynb  segmentation.ipynb  vae.ipynb
(+58 files in other folders)
