[metadata]
name = cnn_framework

description = CNN framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/15bonte/cnn_framework
author = Thomas Bonte
author_email = thomas.bonte@mines-paristech.fr
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/15bonte/cnn_detector/issues
    Documentation = https://github.com/15bonte/cnn_detector#README.md
    Source Code = https://github.com/15bonte/cnn_detector
    User Support = https://github.com/15bonte/cnn_detector/issues

[options]
packages = find:
install_requires =
    torch>=1.12.1
    scikit-image>=0.19.3
    matplotlib
    scikit-learn>=1.2.2
    pint>=0.19.2
    torchvision>=0.13.1
    albumentations==1.3.0
    torchmetrics>=0.11.4
    big-fish>=0.6.2
    pillow>=9.2.0
    segmentation-models-pytorch>=0.3.0
    protobuf==3.20.*
    tensorboard==2.8.0
    aicsimageio>=4.13.0
    tensorflow==2.8.0

python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    pyqt5